--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 export PORT=3001
 
 # The DA engine used "inmemory" or "celestia"
-VIA_DA_BACKEND=inmemory
+VIA_DA_CLIENT_DA_BACKEND=inmemory
 
 # The DA node url. Optional when VIA_DA_BACKEND=inmemory
 VIA_DA_CLIENT_API_NODE_URL=http://0.0.0.0:26658
