chore: update example env file

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # App port
-export PORT=3001
+PORT=3001
 
 # The DA engine used "inmemory" or "celestia"
-VIA_DA_CLIENT_DA_BACKEND=inmemory
+VIA_DA_CLIENT_DA_BACKEND=celestia
 
 # The DA node url. Optional when VIA_DA_BACKEND=inmemory
 VIA_DA_CLIENT_API_NODE_URL=http://0.0.0.0:26658
@@ -12,3 +12,9 @@ VIA_DA_CLIENT_AUTH_TOKEN=XXX
 
 # The DA blob size limit.
 VIA_DA_CLIENT_BLOB_SIZE_LIMIT=1973786
+
+RUST_LOG=debug
+
+RUST_BACKTRACE=1
+
+RUST_BACKTRACE=full
