fix: update the in memory blob hash format to hex instead of uuid4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.5", features = ["timeout", "trace"] }
 tower = "0.5.2"
 vise = "0.3.2"
+sha2 = "0.10"
