feat: export metrics

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # App port
 PORT=3001
 
+# METRICS port
+METRICS_PORT=3010
+
 # The DA engine used "inmemory" or "celestia"
 VIA_DA_CLIENT_DA_BACKEND=celestia
 
